<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/size_15dp"
    tools:context=".ActivityThree">


    <ImageView
        android:layout_width="@dimen/size_200dp"
        android:layout_height="@dimen/size_200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/alc_logo"
        android:src="@drawable/andela_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:paddingStart="@dimen/size_15dp"
            android:paddingLeft="@dimen/size_15dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slack_username"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/size_15dp"
            android:paddingLeft="@dimen/size_15dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nigeria"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nerojust7_gmail_com"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_08069809921"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nerojust"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>