<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".ActivityOne"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_50dp"
        android:layout_marginBottom="@dimen/size_70dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="#000000"
        android:textSize="@dimen/textsize_35sp"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="@dimen/size_150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/about_alc"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20sp"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/myProfile"
        android:layout_width="@dimen/size_150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_40dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20sp"
        tools:targetApi="jelly_bean" />

</LinearLayout>